--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "Backend API for Mood Tracker application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "start": "node server.js",
+    "test": "curl -X GET http://localhost:3000/health"
   },
   "keywords": ["mood", "tracker", "api", "express"],
   "author": "procop07",
@@ -15,10 +15,11 @@
     "express": "^4.18.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "mongoose": "^7.0.0"
+    "googleapis": "^126.0.0",
+    "joi": "^17.9.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "jest": "^29.0.0"
+    "nodemon": "^2.0.20"
   }
 }
