Add TZ=Asia/Yekaterinburg and security comments to .env.exampleAdd TZ variable and security comments to .env.exampleUpdate .env.example
- Added TZ=Asia/Yekaterinburg timezone setting for proper local time handling
- Added security comments warning against committing secrets
- Updated environment variable descriptions for CI/CD best practices

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 PORT=8080
-GOOGLE_SPREADSHEET_ID=...
-GOOGLE_SERVICE_ACCOUNT_KEY=/abs/path/to/service_account.json
+GOOGLE_SPREADSHEET_ID=...               # ID вашей Google таблицы (лучше передавать как секрет в CI)
+GOOGLE_SERVICE_ACCOUNT_KEY=/abs/path/to/service_account.json  # Абсолютный путь к JSON-ключу сервис-аккаунта (никогда не коммитьте сам ключ)
+TZ=Asia/Yekaterinburg                    # Временная зона для локального времени (пример: Екатеринбург)
