--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node src/server.js",
-    "test": "curl -X GET http://localhost:3000/health"
+    "test": "curl -X GET http://localhost:3000/health",
+    "test:api": "node src/server.js & echo $! > .pid && sleep 2 && curl -f http://localhost:8080/api/health && kill $(cat .pid)",
+    "test:series": "node src/server.js & echo $! > .pid && sleep 2 && for i in 1 2 3 4 5 6 7; do case $i in 1|2) mood=3 ;; 3|4) mood=4 ;; 5|6) mood=5 ;; 7) mood=6 ;; esac; day=$(printf \"2025-07-%02dT10:00:00+05:00\" $i); curl -s -X POST http://localhost:8080/api/submit -H 'Content-Type: application/json' -d \"{\\\"timestamp\\\":\\\"$day\\\",\\\"mood\\\":$mood,\\\"energy\\\":4,\\\"anxiety\\\":2,\\\"irritability\\\":1,\\\"notes\\\":\\\"hypo d$i\\\"}\" >/dev/null; done; kill $(cat .pid)"
   },
   "keywords": ["mood", "tracker", "api", "express"],
   "author": "procop07",
