Improve code-quality workflow: add working-directory, use npm ci, soft lint checksImprove code-quality workflow: add working-directory, use npm ci, soft lint checksUpdate code-quality.yml

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -1,15 +1,21 @@
 name: Code Quality
-
 on:
   push:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
 
+defaults:
+  run:
+    working-directory: backend
+
 jobs:
   lint:
     name: ESLint & Code Formatting
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
     
     steps:
     - name: Checkout code
@@ -23,23 +29,22 @@ jobs:
         cache-dependency-path: backend/package-lock.json
         
     - name: Install dependencies
-      run: |
-        cd backend
-        npm ci
+      run: npm ci
         
     - name: Run ESLint
-      run: |
-        cd backend
-        npx eslint . --ext .js,.jsx,.ts,.tsx --format=github
+      run: npx eslint . --ext .js,.jsx,.ts,.tsx --format=github
+      continue-on-error: true
         
     - name: Check Prettier formatting
-      run: |
-        cd backend
-        npx prettier --check "src/**/*.js"
+      run: npx prettier --check "src/**/*.js"
+      continue-on-error: true
 
   security:
     name: Security Audit
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
     
     steps:
     - name: Checkout code
@@ -49,16 +54,15 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: backend/package-lock.json
         
     - name: Install dependencies
-      run: |
-        cd backend
-        npm install
+      run: npm ci
         
     - name: Run security audit
-      run: |
-        cd backend
-        npm audit --audit-level=moderate
+      run: npm audit --audit-level=moderate
+      continue-on-error: true
         
     - name: Run CodeQL Analysis
       uses: github/codeql-action/analyze@v3
@@ -68,6 +72,9 @@ jobs:
   dependency-check:
     name: Dependency Analysis
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
     
     steps:
     - name: Checkout code
@@ -77,18 +84,14 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: backend/package-lock.json
         
     - name: Install dependencies
-      run: |
-        cd backend
-        npm install
+      run: npm ci
         
     - name: Check for outdated packages
-      run: |
-        cd backend
-        npm outdated || true
+      run: npm outdated || true
         
     - name: License compliance check
-      run: |
-        cd backend
-        npx license-checker --summary
+      run: npx license-checker --summary
