--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,48 +1,29 @@
 name: CI
+
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    
-    env:
-      GOOGLE_SPREADSHEET_ID: ${{ secrets.GOOGLE_SPREADSHEET_ID }}
-      GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
-      TZ: Asia/Yekaterinburg
-      PORT: 8080
+    defaults:
+      run:
+        working-directory: backend
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js 20
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20'
+        node-version-file: '.nvmrc'
         
     - name: Install dependencies
-      run: |
-        cd backend
-        npm install
+      run: npm ci
         
-    - name: Start server
-      run: |
-        cd backend
-        node src/server.js &
-        sleep 5
-        
-    - name: Test API endpoints
-      run: |
-        # Test health endpoint
-        curl -f http://localhost:8080/api/health
-        
-        # Test submit endpoint
-        curl -X POST http://localhost:8080/api/submit \
-          -H "Content-Type: application/json" \
-          -d '{"mood":4,"energy":4,"anxiety":2,"irritability":1,"notes":"тест"}'
-        
-        echo "All tests passed!"
+    - name: Run tests
+      run: npm test
